test/jit/math/neg/neg-scalar-integer.mo
function negScalarInteger
    input Integer x;
    output Integer y;

    algorithm
        y := -x;
end negScalarInteger;
